--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -84,17 +84,14 @@
 
     <build>
         <plugins>
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-jar-plugin</artifactId>-->
-<!--                <version>2.4</version>-->
-<!--                <configuration>-->
-<!--                    <archive>-->
-<!--                        <addMavenDescriptor>true</addMavenDescriptor>-->
-<!--                    </archive>-->
-<!--                    <outputDirectory>${project.build.directory}/../../target</outputDirectory>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.2</version>
+                <configuration>
+                    <outputDirectory>${project.build.directory}/../../target/bin</outputDirectory>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
