--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     </modules>
 
     <properties>
-        <revision>0.2.6-SNAPSHOT</revision>
+        <revision>0.2.6</revision>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <spring.boot.version>2.7.7</spring.boot.version>
@@ -298,7 +298,7 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid</artifactId>
-                <version>1.1.16</version>
+                <version>1.2.22</version>
             </dependency>
             <!--infrastructure-base end-->
         </dependencies>
