--- a/demo/basic/pom.xml
+++ b/demo/basic/pom.xml
@@ -106,5 +106,10 @@
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-layout-template-json</artifactId>
+            <version>2.17.2</version>
+        </dependency>
     </dependencies>
 </project>
