--- a/demo/starter/src/main/resources/application.properties
+++ b/demo/starter/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=80
+spring.profiles.active=local
 
 spring.datasource.a.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.a.driver-class-name=org.h2.Driver
@@ -32,5 +33,6 @@ spring.h2.console.settings.web-allow-others=true
 spring.sql.init.schema-locations=classpath:sql/schema.sql
 #spring.sql.init.data-locations=classpath:sql/data.sql
 
-
 frodo.port=24113
+
+logging.config=classpath:log4j2.xml
