--- a/pom.xml
+++ b/pom.xml
@@ -300,6 +300,11 @@
                 <artifactId>druid</artifactId>
                 <version>1.2.22</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-layout-template-json</artifactId>
+                <version>2.17.2</version>
+            </dependency>
             <!--infrastructure-base end-->
         </dependencies>
     </dependencyManagement>
