log4j2.xml will be recognized as the configuration of log4j2.xml, i use log4j2-console.xml and log4j2-file.xml to diff

--- a/demo/starter/src/main/resources/application.properties
+++ b/demo/starter/src/main/resources/application.properties
@@ -35,4 +35,4 @@ spring.sql.init.schema-locations=classpath:sql/schema.sql
 
 frodo.port=24113
 
-logging.config=classpath:log4j2.xml
+logging.config=classpath:log4j2-file.xml
