--- a/demo/adapter/pom.xml
+++ b/demo/adapter/pom.xml
@@ -36,54 +36,14 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>aspectj-maven-plugin</artifactId>
-                <version>1.14.0</version>
                 <configuration>
-                    <complianceLevel>1.8</complianceLevel>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <showWeaveInfo>true</showWeaveInfo>
-                    <Xlint>warning</Xlint>
-                    <verbose>true</verbose>
-                    <detail>true</detail>
-                    <forceAjcCompile>true</forceAjcCompile>
                     <aspectLibraries>
                         <library>
-                            <groupId>com.stellariver.milky</groupId>
-                            <artifactId>aspectj-tool</artifactId>
-                        </library>
-                        <library>
-                            <groupId>com.stellariver.milky</groupId>
-                            <artifactId>aspectj-tool</artifactId>
+                            <groupId>com.stellariver.milky.demo</groupId>
+                            <artifactId>basic</artifactId>
                         </library>
                     </aspectLibraries>
-                    <showWeaveInfo>true</showWeaveInfo>
-                    <Xlint>warning</Xlint>
-                    <verbose>false</verbose>
-                    <weaveDirectories>
-                        <weaveDirectory>${project.build.outputDirectory}</weaveDirectory>
-                    </weaveDirectories>
-                    <sources/>
                 </configuration>
-                <executions>
-                    <execution>
-                        <phase>process-classes</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.aspectj</groupId>
-                        <artifactId>aspectjrt</artifactId>
-                        <version>${aspectj.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.aspectj</groupId>
-                        <artifactId>aspectjtools</artifactId>
-                        <version>${aspectj.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>
