--- a/demo/starter/src/main/resources/bootstrap.properties
+++ b/demo/starter/src/main/resources/bootstrap.properties
@@ -33,4 +33,6 @@ spring.h2.console.settings.web-allow-others=true
 spring.sql.init.schema-locations=classpath:sql/schema.sql
 #spring.sql.init.data-locations=classpath:sql/data.sql
 
+logging.config=classpath:log4j2-console.xml
+
 frodo.port=24113
