delete Base Aspect

--- a/demo/starter/src/main/resources/bootstrap.properties
+++ b/demo/starter/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
 server.port=80
+spring.profiles.active=local
 
 spring.datasource.a.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.a.driver-class-name=org.h2.Driver
@@ -11,7 +12,6 @@ spring.datasource.a.time-between-eviction-runs-millis=6000
 spring.datasource.a.min-evictable-idle-time-millis=30000
 spring.datasource.a.test-on-borrow=false
 spring.datasource.a.test-on-return=false
-
 
 spring.datasource.b.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.b.driver-class-name=org.h2.Driver
