--- a/demo/starter/src/main/resources/bootstrap.properties
+++ b/demo/starter/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
 server.port=80
+spring.profiles.active=local
 
 spring.datasource.a.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.a.driver-class-name=org.h2.Driver
