add demo java ftp server

--- a/demo/basic/pom.xml
+++ b/demo/basic/pom.xml
@@ -115,5 +115,9 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.ftpserver</groupId>
+            <artifactId>ftpserver-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
