--- a/pom.xml
+++ b/pom.xml
@@ -305,6 +305,11 @@
                 <artifactId>log4j-layout-template-json</artifactId>
                 <version>2.17.2</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.ftpserver</groupId>
+                <artifactId>ftpserver-core</artifactId>
+                <version>1.2.0</version>
+            </dependency>
             <!--infrastructure-base end-->
         </dependencies>
     </dependencyManagement>
