Revert "delete frodo"
This reverts commit 4734191ce1a1dd893c430eaf8d33c2cbc2a524f9.

--- a/demo/starter/pom.xml
+++ b/demo/starter/pom.xml
@@ -11,6 +11,11 @@
     <artifactId>starter</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>com.stellariver.milky.frodo</groupId>
+            <artifactId>frodo-spring-boot-starter</artifactId>
+        </dependency>
+
         <!--for jacoco report start-->
         <dependency>
             <groupId>com.stellariver.milky</groupId>
