--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     </modules>
 
     <properties>
-        <revision>0.3.1</revision>
+        <revision>0.3.2-SNAPSHOT</revision>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
