--- a/common-tool/pom.xml
+++ b/common-tool/pom.xml
@@ -81,6 +81,10 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>tech.units</groupId>
+            <artifactId>indriya</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
